<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/space_medium"
    android:background="@color/black">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/feat_feed_content_description_post_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView

        android:id="@+id/creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feat_feed_post_username"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        app:layout_constraintTop_toTopOf="@id/profilePicture"
        android:layout_marginStart="@dimen/space_medium"
        style="@style/TheSocialNetwork.TextStyle.Title"/>

    <TextView

        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/creator"
        android:text="@string/feat_feed_post_text"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_small"
        style="@style/TheSocialNetwork.TextStyle.Post"
        />


</androidx.constraintlayout.widget.ConstraintLayout>